--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
   <h1>Odin Recipes</h1>
+  <ul>
+    <li><a href="recipes/pork_adobo.html">Pork Adobo</a></li>
+    <li><a href="recipes/pork_sinigang.html">Pork Sinigang</a></li>
+    <li><a href="recipes/pork_sisig.html">Pork Sisig</a></li>
+  </ul>
 </body>
 </html>
