Update html files in recipe/ by adding description

--- a/recipes/pork_adobo.html
+++ b/recipes/pork_adobo.html
@@ -9,5 +9,14 @@
 <body>
   <h1>Pork Adobo</h1>
   <img src="../images/pork_adobo.jpg">
+  <h3>Tasty black dish!</h3>
+  <p>
+    The word Adobo was derived from the Spanish word “adobar”. 
+    It means to marinate. This can be in the form of a liquid 
+    marinade or to rub using a combination of powdered ingredient.
+    This version of Filipino Adobo suggests marinating the pork 
+    in soy sauce and crushed garlic. By preference, vinegar can 
+    also be added as a marinade ingredient.
+  </p>
 </body>
 </html>
