--- a/recipes/pork_sisig.html
+++ b/recipes/pork_sisig.html
@@ -9,5 +9,13 @@
 <body>
   <h1>Pork Sisig</h1>
   <img src="../images/pork_sisig.jpg">
+  <h3>Fatty flavor with a twist!</h3>
+  <p>
+    Pork sisig is a popular Filipino dish. 
+    It can be considered as a main dish or an appetizer. 
+    The composition of this dish is mainly of pig's parts 
+    such as minced pork meat, ears, and face. Chicken liver, 
+    onions, and chili peppers are also added.
+  </p>
 </body>
 </html>
