--- a/recipes/pork_adobo.html
+++ b/recipes/pork_adobo.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Pork Adobo</h1>
   <img src="../images/pork_adobo.jpg">
-  <h3>Tasty black dish!</h3>
+  <h2>Tasty black dish!</h2>
   <p>
     The word Adobo was derived from the Spanish word “adobar”. 
     It means to marinate. This can be in the form of a liquid 
@@ -18,5 +18,27 @@
     in soy sauce and crushed garlic. By preference, vinegar can 
     also be added as a marinade ingredient.
   </p>
+  <h3>Ingredients</h3>
+  <ul>
+    <li>2 lbs pork belly</li>
+    <li>2 tablespoons garlic minced or crushed</li>
+    <li>5 pieces dried bay leaves</li>
+    <li>4 tablespoons vinegar</li>
+    <li>1/2 cup soy sauce</li>
+    <li>1 tablespoon peppercorn</li>
+    <li>2 cups water</li>
+    <li>Salt to taste</li>
+  </ul>
+  <h3>Instructions</h3>
+  <ol>
+    <li>Combine the pork belly, soy sauce, and garlic then marinade for at least 1 hour</li>
+    <li>Heat the pot and put-in the marinated pork belly then cook for a few minutes</li>
+    <li>Pour remaining marinade including garlic.</li>
+    <li>Add water, whole pepper corn, and dried bay leaves then bring to a boil. Simmer for 40 minutes to 1 hour</li>
+    <li>Put-in the vinegar and simmer for 12 to 15 minutes</li>
+    <li>Add salt to taste</li>
+    <li>Serve hot. Share and enjoy!</li>
+  </ol>
+  <a href="../index.html">Back to main</a>
 </body>
 </html>
