--- a/recipes/pork_sinigang.html
+++ b/recipes/pork_sinigang.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Pork Sinigang</h1>
   <img src="../images/pork_sinigang.jpg">
-  <h3>Sour and savory!</h3>
+  <h2>Sour and savory!</h2>
   <p>
     Sinigang is a sour soup native to the Philippines. 
     This recipe uses pork as the main ingredient. 
@@ -23,5 +23,33 @@
     and chopped baby back ribs. Pork shoulder and ham can 
     also be used when cooking sinigang.
   </p>
+  <h3>Ingredients</h3>
+  <ul>
+    <li>2 lbs pork belly</li>
+    <li>1 bunch of river spinach</li>
+    <li>3 tablespoons fish sauce</li>
+    <li>12 pieces string beans, cut in 2 inch length</li>
+    <li>2 pieces tomato, quartered</li>
+    <li>3 pieces chili or banana pepper</li>
+    <li>1 tablespoons cooking oil</li>
+    <li>2 quarts water</li>
+    <li>1 piece onion sliced</li>
+    <li>2 pieces taro gabi, quartered</li>
+    <li>1 pack sinigang mix good for 2 liters water</li>
+  </ul>
+  <h3>Instructions</h3>
+  <ol>
+    <li>Heat the pot and put-in the cooking oil</li>
+    <li>Sauté the onion until its layers separate from each other</li>
+    <li>Add the pork belly and cook until outer part turns light brown</li>
+    <li>Put-in the fish sauce and mix with the ingredients</li>
+    <li>Pour the water and bring to a boil</li>
+    <li>Add the taro and tomatoes then simmer for 40 minutes or until pork is tender</li>
+    <li>Put-in the sinigang mix and chili</li>
+    <li>Add the string beans (and other vegetables if there are any) and simmer for 5 to 8 minutes</li>
+    <li>Put-in the spinach, turn off the heat, and cover the pot. Let the spinach cook using the remaining heat in the pot.</li>
+    <li>Serve hot. Share and enjoy!</li>
+  </ol>
+  <a href="../index.html">Back to main</a>
 </body>
 </html>
